Fix image, update buttons

--- a/index.html
+++ b/index.html
@@ -1,96 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Vitold Radkevich - Java Developer</title>
-
-  <!-- Custom fonts for this theme -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
-  <!-- Theme CSS -->
-  <link href="css/freelancer.css" rel="stylesheet">
-
-</head>
-
-<body id="page-top">
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">My Portfolio</a>
-      <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Masthead -->
-  <header class="masthead bg-primary text-white text-center">
-    <div class="container d-flex align-items-center flex-column">
-
-      <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/avatar.png" alt="">
-
-      <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">Vitold Radkevich</h1>
-
-      <!-- Icon Divider -->
-      <div class="divider-custom divider-light">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-graduation-cap"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
-      <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Java - Web Developer - Spring</p>
-
-    </div>
-  </header>
-
-  <!-- Portfolio Section -->
-  <section class="page-section portfolio" id="portfolio">
-    <div class="container">
-
-      <!-- Portfolio Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
-
-      <!-- Icon Divider -->
-      <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-box-open"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
-      <!-- Portfolio Grid Items -->
-      <div class="row">
-
-<!-- Portfolio Item 4 -->
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Freelancer - Start Bootstrap Theme</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">My Portfolio</a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Masthead-->
+        <header class="masthead bg-primary text-white text-center">
+            <div class="container d-flex align-items-center flex-column">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="img/avatar.png" alt="" /><!-- Masthead Heading-->
+                <h1 class="masthead-heading text-uppercase mb-0">Vitold Radkevich</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                         <i class="fas fa-graduation-cap"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Masthead Subheading-->
+                <p class="masthead-subheading font-weight-light mb-0">Java - Web Developer - Spring</p>
+            </div>
+        </header>
+        <!-- Portfolio Section-->
+        <section class="page-section portfolio" id="portfolio">
+            <div class="container">
+                <!-- Portfolio Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                       <i class="fas fa-box-open"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Portfolio Grid Items-->
+                <div class="row">
+                    <!-- Portfolio Item 1-->
+                    <!-- Portfolio Item 4 -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -187,12 +160,11 @@
         </div>
         </div>
       <!-- /.row -->
+            </div>
+        </section>
 
-    </div>
-  </section>
-
-  <!-- About Section -->
-  <section class="page-section bg-primary text-white mb-0" id="about">
+        <!-- About Section-->
+        <section class="page-section bg-primary text-white mb-0" id="about">
     <div class="container">
 
       <!-- About Section Heading -->
@@ -228,8 +200,7 @@
 
     </div>
   </section>
-
-  <!-- Contact Section -->
+        <!-- Contact Section -->
   <section class="page-section" id="contact">
     <div class="container">
 
@@ -250,29 +221,29 @@
         <div class="col-lg-8 mx-auto">
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
           <form name="sentMessage" id="contactForm" novalidate="novalidate">
-            <div class="btn-group">
+            <div class="btn-group" data-toggle="collapse">
                <div class="text-center mt-4">
-        <a class="btn btn-info-contact" href="https://www.linkedin.com/in/vitold-radkevich/">
+        <a class="btn btn-outline-info" href="https://www.linkedin.com/in/vitold-radkevich/">
           <i class="fab fa-linkedin"></i>
           Linkedin
         </a>
       </div>
       <div class="text-center mt-4">
-        <a class="btn btn-info-contact" href="mailto:radkevich_vitold@mail.ru">
+        <a class="btn btn-outline-info" href="mailto:radkevich_vitold@mail.ru">
           <i class="fab fa-google"></i>
           Mail
         </a>
       </div>
        <div class="text-center mt-4">
-        <a class="btn btn-info-contact" href="CV/CV-Radkevich-EN.doc">
+        <a class="btn btn-outline-info" href="CV/CV-Radkevich-EN.doc">
            <i class="far fa-file-word"></i>
-          Check my CV
+          Check CV
         </a>
       </div>
       <div class="text-center mt-4">
-        <a class="btn btn-info-contact" href="tel:+375295501501">
+        <a class="btn btn-outline-info" href="tel:+375295501501">
            <i class="fas fa-mobile-alt"></i>
-          +375 (29) 5-501-501
+          Call me
         </a>
       </div>                
             </div>
@@ -283,7 +254,7 @@
     </div>
   </section>
 
-  <!-- Footer -->
+        <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
       <div class="row">
@@ -293,7 +264,7 @@
           <h4 class="text-uppercase mb-4">Location</h4>
           <div class="lead mb-0">
           <i class="fas fa-map-marker-alt"></i>
-           Belarus, Minsk	
+           Belarus, Minsk   
           </div>
         </div>
       </div>
@@ -306,15 +277,11 @@
       <small>Copyright &copy; Portfolio Vitold Radkevich 2019</small>
     </div>
   </section>
-
-  <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-  <div class="scroll-to-top d-lg-none position-fixed ">
-    <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
-      <i class="fa fa-chevron-up"></i>
-    </a>
-  </div>
-
-  <!-- Portfolio Modals -->
+        <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
+        <div class="scroll-to-top d-lg-none position-fixed">
+            <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
+        </div>
+         <!-- Portfolio Modals -->
 
   <!-- Portfolio Modal 1 -->
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
@@ -349,15 +316,15 @@
 <br>Freemarker - page templates;
 <br>Bootstrap - for page layout;
 <br>Flyway - for database migration;</p>
- <a class="btn btn-info" href="https://webber1.herokuapp.com/">
-           <i class="fa fa-share" mr-2></i>
+ <a class="btn btn-outline-success" href="https://webber1.herokuapp.com/">
+           <i class="fas fa-server"></i>
           Webber
         </a>
-        <a class="btn btn-info" href="https://github.com/Vitold-sys/Vitbort_Spring_MVC">
-           <i class="fa fa-share" mr-2></i>
+        <a class="btn btn-outline-primary" href="https://github.com/Vitold-sys/Vitbort_Spring_MVC">
+           <i class="fab fa-git"></i>
           Repository
         </a> 
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -402,11 +369,11 @@
 <br>Gradle - to build project;
 <br> Vue, Vuetify - frontend;
 <br>Webpack, Lombok</p>
- <a class="btn btn-info" href="https://github.com/Vitold-sys/Belbort">
-           <i class="fa fa-share" mr-2></i>
+ <a class="btn btn-outline-primary" href="https://github.com/Vitold-sys/Belbort">
+           <i class="fab fa-git"></i>
           Belbort
         </a>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -448,11 +415,11 @@
 <br>- For parsing the page used Jsoup;
 <br>- To select the necessary information regular expressions;
 <br>- To build the project I used Maven;</p>
-<a class="btn btn-info" href="https://lnkd.in/e8KUqvD">
-           <i class="fa fa-share" mr-2></i>
+<a class="btn btn-outline-primary" href="https://lnkd.in/e8KUqvD">
+           <i class="fab fa-git"></i>
           Link to the project
         </a>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -494,11 +461,11 @@
 <br>- Use google maps with token;
 <br>- Use accuweather to show weather;
 <br>- To build the project I used Gradle;</p>
-                <a class="btn btn-info" href="https://github.com/Vitold-sys/Golow">
-           <i class="fa fa-share" mr-2></i>
+                <a class="btn btn-outline-primary" href="https://github.com/Vitold-sys/Golow">
+           <i class="fab fa-git"></i>
           Repository
         </a>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -537,11 +504,11 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/circus.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Java Core, Java Fundamentals examples of simple tasks.</p>
-                <a class="btn btn-info" href="https://github.com/Vitold-sys/Java-core">
-           <i class="fa fa-share" mr-2></i>
+                <a class="btn btn-outline-primary" href="https://github.com/Vitold-sys/Java-core">
+           <i class="fab fa-git"></i>
           Repository
         </a>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -589,11 +556,11 @@
 <br>Authentication through mail is provided, the administrator can delete users, change their roles. Each user can change their mail and password.
 In addition, I conducted tests with connection to a test database.
 </p>
- <a class="btn btn-info" href="https://github.com/Vitold-sys/bookreader1">
-           <i class="fa fa-share" mr-2></i>
+ <a class="btn btn-outline-primary" href="https://github.com/Vitold-sys/bookreader1">
+           <i class="fab fa-git"></i>
           Repository
         </a>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -641,11 +608,11 @@ In addition, I conducted tests with connection to a test database.
 <br>Front Controller
 <br>The administrator can delete users, change their roles. Each user can change their mail and password.
 </p>
- <a class="btn btn-info" href="https://bitbucket.org/RadkevichVitold/messenger/src/Vitold/">
-           <i class="fa fa-share" mr-2></i>
+ <a class="btn btn-outline-primary" href="https://bitbucket.org/RadkevichVitold/messenger/src/Vitold/">
+           <i class="fab fa-git"></i>
           Repository
         </a>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -694,11 +661,11 @@ In addition, I conducted tests with connection to a test database.
 <br>Postgres
 <br>Jwt
 </p>
- <a class="btn btn-info" href="https://github.com/Vitold-sys/Vitbort_social">
-           <i class="fa fa-share" mr-2></i>
+ <a class="btn btn-outline-primary" href="https://github.com/Vitold-sys/Vitbort_social">
+           <i class="fab fa-git"></i>
           Repository
         </a>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -709,21 +676,15 @@ In addition, I conducted tests with connection to a test database.
       </div>
     </div>
   </div>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Contact Form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/freelancer.min.js"></script>
-
-</body>
-
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Contact form JS-->
+        <script src="assets/mail/jqBootstrapValidation.js"></script>
+        <script src="assets/mail/contact_me.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
