Add certification part

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#certification">Certifications</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contacts</a></li>
                     </ul>
                 </div>
             </div>
@@ -163,6 +164,107 @@
             </div>
         </section>
 
+        <!-- Certification Section-->
+        <section class="page-section portfolio" id="certification">
+            <div class="container">
+                <!-- Certification Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Certifications</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                       <i class="fas fa-project-diagram"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Certification Grid Items-->
+                <div class="row">
+                    <!-- Certification Item 9-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/9.jpg" alt="">
+          </div>
+        </div>
+              <!-- Certification Item 8-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/8.jpg" alt="">
+          </div>
+        </div>
+                      <!-- Certification Item 7-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/7.jpg" alt="">
+          </div>
+        </div>
+                      <!-- Certification Item 6-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/6.jpg" alt="">
+          </div>
+        </div>
+                      <!-- Certification Item 5-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/5.jpg" alt="">
+          </div>
+        </div>
+                        <!-- Certification Item 4-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/4.jpg" alt="">
+          </div>
+        </div>
+                        <!-- Certification Item 3-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/3.jpg" alt="">
+          </div>
+        </div>
+                        <!-- Certification Item 2-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/2.jpg" alt="">
+          </div>
+        </div>
+                        <!-- Certification Item 1-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/1.jpg" alt="">
+          </div>
+        </div>
+                       <!-- Certification Item 10-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/10.jpg" alt="">
+          </div>
+        </div>
+      
+        </div>
+      <!-- /.row -->
+            </div>
+        </section>
+
         <!-- About Section-->
         <section class="page-section bg-primary text-white mb-0" id="about">
     <div class="container">
@@ -187,6 +289,7 @@
         <div class="col-lg-4 mr-auto">
           <p class="lead">I studied Python myself, then I realized that I wanted to learn Java. I have graduated from IT Academy Java Fundamentals courses. Finished internship as a Java developer with success.</p>
           <p class="lead"> I attend events and conferences that helps me grow as a specialist.</p>
+          <p class="lead"> AWS certified.</p>
         </div>
       </div>
 
