Add linux certificate
Update certificate section and footer

--- a/index.html
+++ b/index.html
@@ -179,9 +179,17 @@
                 </div>
                 <!-- Certification Grid Items-->
                 <div class="row">
+                                 <!-- Certification Item 11-->
+        <div class="col-md-6 col-lg-4 mb-3">
+          <div class="mx-auto">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            </div>
+            <img class="img-fluid" src="img\certificates/linux.jpg" alt="">
+          </div>
+        </div>
                     <!-- Certification Item 9-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/9.jpg" alt="">
@@ -189,7 +197,7 @@
         </div>
               <!-- Certification Item 8-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/8.jpg" alt="">
@@ -197,7 +205,7 @@
         </div>
                       <!-- Certification Item 7-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/7.jpg" alt="">
@@ -205,7 +213,7 @@
         </div>
                       <!-- Certification Item 6-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/6.jpg" alt="">
@@ -213,7 +221,7 @@
         </div>
                       <!-- Certification Item 5-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/5.jpg" alt="">
@@ -221,7 +229,7 @@
         </div>
                         <!-- Certification Item 4-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/4.jpg" alt="">
@@ -229,7 +237,7 @@
         </div>
                         <!-- Certification Item 3-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/3.jpg" alt="">
@@ -237,7 +245,7 @@
         </div>
                         <!-- Certification Item 2-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/2.jpg" alt="">
@@ -245,7 +253,7 @@
         </div>
                         <!-- Certification Item 1-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/1.jpg" alt="">
@@ -253,7 +261,7 @@
         </div>
                        <!-- Certification Item 10-->
         <div class="col-md-6 col-lg-4 mb-3">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
             </div>
             <img class="img-fluid" src="img\certificates/10.jpg" alt="">
@@ -353,31 +361,23 @@
           </form>
         </div>
       </div>
-
     </div>
   </section>
 
         <!-- Footer -->
   <footer class="footer text-center">
-    <div class="container">
-    
-
         <!-- Footer Location -->
-        <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
           <div class="lead mb-0">
           <i class="fas fa-map-marker-alt"></i>
            Belarus, Minsk   
           </div>
-        </div>
- 
-    </div>
   </footer>
 
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Portfolio Vitold Radkevich 2019</small>
+      <small>Copyright &copy; Vitold Radkevich 2019</small>
     </div>
   </section>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
